<resources>
    <string name="app_name">VidyarthiMitra</string>

    <string name="simple_circle_button_example">Simple Circle Button Example</string>
    <string name="text_inside_circle_button_example">Text Inside Circle Button Example</string>
    <string name="text_outside_circle_button_example">Text Outside Circle Button Example</string>
    <string name="ham_button_example">Ham Button Example</string>
    <string name="square_and_piece_corner_radius_example">Square And Piece Corner Radius Example</string>
    <string name="boom_example">Boom Example</string>
    <string name="button_place_alignment_example">Button Place Alignment Example</string>
    <string name="order_example">Order Example</string>
    <string name="actionbar_example">ActionBar Example</string>
    <string name="tool_bar_example">ToolBar Example</string>
    <string name="draggable_example">Draggable Example</string>
    <string name="ease_example">Ease Example</string>
    <string name="listener_example">Listener Example</string>
    <string name="control_example">Control Example</string>
    <string name="share_example">Share Example</string>
    <string name="list_example">List Example</string>
    <string name="recycler_view_example">Recycler View Example</string>
    <string name="fragment_example">Fragment Example</string>
    <string name="change_boom_button_example">Change Boom Button Example</string>
    <string name="three_d_animation_example">3D Animation Example</string>
    <string name="custom_position_example">Custom Position Example</string>
    <string name="fade_views_example">Fade Views Example</string>
    <string name="orientation_example">Orientation Example</string>

    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>

    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>

    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>

    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_condensed">sans-serif-condensed</string>

    <string name="loading">Loading..</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="password">Password</string>
    <string name="passwordReenter">Confirm Password</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_button_click">Login button clicked</string>
    <string name="signup_button_click">Sign Up button clicked</string>
    <string name="reset_password_button_clicked">Reset Password button clicked</string>
    <string name="empty_username">Empty</string>
    <string name="empty">Empty</string>
    <string name="invalid">Invalid Email</string>
    <!--<string name="app_name">VM</string>-->
    <string name="username_error">Invalid Username</string>
    <string name="terms_and_conditions">Terms ansd Conditionds\tbanana\torange\tblueberry\tmango.This is the first sentence\nThis is the second scentence\nThis is the third sentence</string>
</resources>
