<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_color"
    android:orientation="vertical">
    <!--<com.nightonke.boommenu.BoomMenuButton-->
        <!--android:id="@+id/bmb"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true" />-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"

            android:padding="10dp"
            android:src="@drawable/vidya"></ImageView>




    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="33dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/user_icon"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email_layout">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="33dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/password_icon"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_medium" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/password_checkbox3"
                android:layout_width="51dp"
                android:layout_height="65dp"
                android:layout_alignParentRight="true"
                android:checked="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <TextView
            android:id="@+id/resetps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/password_layout"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="38dp"
            android:text="| Contact_Us"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RtlCompat" />

        <RelativeLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/signup_layout">

            <LinearLayout
                android:id="@+id/login_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:background="@color/orange"
                android:clickable="true">

                <Button
                    android:id="@+id/signinbutton"
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:background="@color/orange"
                    android:gravity="center"
                    android:onClick="onLogin"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_big" />
            </LinearLayout>

        </RelativeLayout>

        <AbsoluteLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            tools:ignore="RtlCompat">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="49dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="RtlCompat">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/clickonsignup"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:onClick="openReg"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        tools:ignore="OnClick" />

            </LinearLayout>


        </AbsoluteLayout>


    </RelativeLayout>



</LinearLayout>
