<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_color">

    <LinearLayout
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:padding="10dp"
        android:onClick="backClick">

        <ImageView
            android:id="@+id/backimg"
            android:layout_width="@dimen/home_icon_size"
            android:layout_height="@dimen/home_icon_size"
            android:src="@drawable/ic_back" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:gravity="center_vertical"
        android:padding="25dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_layout"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">

        <RelativeLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="35dp"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_user"
                android:layout_marginLeft="16dp"
                android:layout_alignParentLeft="true" />

            <EditText
                android:id="@+id/username_edittext"
                android:layout_width="298dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/user_icon"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="21dp"
                android:src="@drawable/ic_email"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="21dp" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="301dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/email_icon"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contact_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/contact_icon"
                android:layout_width="30dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_contact" />

            <EditText
                android:id="@+id/contact_edittext"
                android:layout_width="319dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="-7dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/contact_icon"
                android:background="@android:color/transparent"
                android:hint="@string/contact"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="46dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_password"
                android:layout_marginLeft="12dp"
                android:layout_alignParentLeft="true" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="298dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/password_icon"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/password_checkbox"
                android:layout_width="51dp"
                android:layout_height="65dp"
                android:layout_alignParentRight="true"
                android:checked="false" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirmpassword_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/password_icon2"
                android:layout_width="37dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="17dp"
                android:src="@drawable/ic_password"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="17dp" />

            <EditText
                android:id="@+id/confirm_edittext"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/password_icon2"
                android:background="@android:color/transparent"
                android:hint="@string/passwordReenter"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_medium" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/password_checkbox2"
                android:layout_width="51dp"
                android:layout_height="65dp"
                android:layout_alignParentRight="true"
                android:checked="false" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="57dp"
        android:background="@color/orange"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:id="@+id/signup_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:clickable="true">

            <Button
                android:id="@+id/signupbutton"
                android:layout_width="334dp"
                android:layout_height="50dp"
                android:background="@null"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onReg"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/already_have_account"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <LinearLayout
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="-10dp"
                android:clickable="true"
                android:onClick="signInClick"
                android:text="@string/forgot_password">

                <TextView
                    android:id="@+id/clickonsignin"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/back_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="138dp"
        android:checked="false" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/checkbox"
        android:layout_alignParentStart="true"
        android:layout_marginStart="76dp"
        android:text="Agree Terms and Conditions"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="70dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/termsclick"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/checkbox"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:text="Click Here"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp" />
</RelativeLayout>
